--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.395.0",
-    "next": "15.2.0",
+    "next": "^15.2.0",
     "next-themes": "^0.3.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
