--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.395.0",
     "next": "15.2.0",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
