--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.40.0",
     "class-variance-authority": "^0.7.0",
@@ -47,6 +48,7 @@
     "react-hook-form": "^7.64.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^16.0.0",
+    "recharts": "^3.4.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76",
@@ -64,6 +66,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cross-env": "^7.0.3",
+    "daisyui": "^5.5.5",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "eslint-config-prettier": "^9.1.0",
