feat: Update admin access control and enhance user interface elements

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "jest --coverage",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky install",
+    "prepare": "husky",
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
