feat: Integrate subscription management with payment processing and UI updates for job posting

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.25.76",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "@stripe/stripe-js": "^2.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
